--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll --verbose --runInBand --coverage",
     "start": "node index.js"
   },
   "engines": {
@@ -15,6 +15,7 @@
   "author": "Nico Flaig <nflaig@protonmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "compression": "^1.7.3",
     "config": "^2.0.1",
     "cors": "^2.8.4",
@@ -22,8 +23,17 @@
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "helmet": "^3.14.0",
+    "joi": "^13.6.0",
+    "joi-password-complexity": "^2.0.1",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.4",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "morgan": "^1.9.1",
+    "supertest": "^3.3.0"
   }
 }
