--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fawn": "^2.1.5",
     "helmet": "^3.14.0",
     "joi": "^13.6.0",
+    "joi-objectid": "^2.0.0",
     "joi-password-complexity": "^2.0.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
