--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "joi-password-complexity": "^2.0.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.4",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
